Bug 117835 - Ctl+Alt+Shift+V should paste in a comment when cursor is active in a comment field
Summary: Ctl+Alt+Shift+V should paste in a comment when cursor is active in a comment ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords: implementationError
: 95411 (view as bug list)
Depends on:
Blocks: Writer-Comments Paste-Special-Unformatted
  Show dependency treegraph
 
Reported: 2018-05-27 14:01 UTC by xordevoreaux
Modified: 2019-09-24 20:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xordevoreaux 2018-05-27 14:01:09 UTC
Description:
Ctl+Alt+Shift+V should paste in a comment when cursor is active in a comment field. Currently, even if the cursor is blinking in a comment, pressing the key commands to paste unformatted text places the text in the body of the document rather than the comment.

Steps to Reproduce:
1. Open writer
2. Type text
3. Copy the text
4. Insert a comment, keep cursor blinking in the comment
5. Press ctrl+alt+shift+v

Actual Results:  
Text appears in body of text

Expected Results:
Text should appear in comment.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.170 Safari/537.36 OPR/53.0.2907.68
Comment 1 Dieter 2018-05-27 15:39:24 UTC
Reproducible with

Version: 6.1.0.0.beta1 (x64)
Build ID: 8c76dfe1284e211954c30f219b3a38dcdd82f8a0
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: de-DE (de_DE); Calc: CL
Comment 2 impreza233 2018-05-28 09:22:29 UTC
I have reproduced it on: 

Version: 6.1.0.0.beta1
Build ID: 8c76dfe1284e211954c30f219b3a38dcdd82f8a0
CPU threads: 3; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: es-ES (es_ES.UTF-8); Calc: group
Comment 3 Timur 2018-05-28 14:51:56 UTC
Same behavior with Ctl+Alt+Shift+V from LO 3.4.
Comment 4 xordevoreaux 2018-08-29 18:21:20 UTC
Still happening in LibreOffice_6.1.1.1_Win_x64
Comment 5 Commit Notification 2018-09-02 17:31:20 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d8a5ebdf9d2bef608a77559e93b5c543acfe6fd

tdf#117835 Paste as Unformatted for comments in Writer

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Maxim Monastirsky 2018-09-02 17:43:03 UTC
*** Bug 95411 has been marked as a duplicate of this bug. ***
Comment 7 Dieter 2019-09-24 20:29:11 UTC
VERIFIED with

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded