tdf#117835 Paste as Unformatted for comments in Writer

Change-Id: Ia96f8c51cc0a3898c1169454bd7c3031e08c45d4
Reviewed-on: https://gerrit.libreoffice.org/59906
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>